[gd_scene load_steps=6 format=4 uid="uid://lkkru7no1ko1"]

[ext_resource type="FontVariation" uid="uid://wkerk1bs0uut" path="res://fonts/default_font_regular.tres" id="2_c1g4p"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="2_g2q8y"]
[ext_resource type="Script" path="res://menus/song_list/SongListPreview.gd" id="8"]

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="4"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 0.0
content_margin_bottom = 10.0
bg_color = Color(0.188235, 0.0745098, 0.301961, 0.501961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10
anti_aliasing_size = 2.0

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("8")

[node name="SongListPreview" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 87

[node name="VBoxContainer" type="VBoxContainer" parent="SongListPreview"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_g2q8y")
theme_override_font_sizes/font_size = 45
text = "(NT)THE TOP"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="OriginalTitleLabel" type="Label" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_c1g4p")
text = "(NT)Original title: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AuthorInfoContainer" type="VBoxContainer" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SongListPreview/VBoxContainer/AuthorInfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c1g4p")
text = "by"
horizontal_alignment = 1

[node name="AuthorLabel" type="Label" parent="SongListPreview/VBoxContainer/AuthorInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g2q8y")
text = "(NT)DRAGONFORCE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CircleImagePanel" type="Panel" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/panel = SubResource("3")

[node name="MarginContainer" type="MarginContainer" parent="SongListPreview/VBoxContainer/CircleImagePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CircleTextureRect" type="TextureRect" parent="SongListPreview/VBoxContainer/CircleImagePanel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SongCoverPanel" type="MarginContainer" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 330.04)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="Control" type="Control" parent="SongListPreview/VBoxContainer/SongCoverPanel"]
layout_mode = 2

[node name="CoverTextureRect" type="TextureRect" parent="SongListPreview/VBoxContainer/SongCoverPanel/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 330.04)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="CoverTextureRectShadow" type="TextureRect" parent="SongListPreview/VBoxContainer/SongCoverPanel/Control/CoverTextureRect"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.75)
show_behind_parent = true
custom_minimum_size = Vector2(0, 330.04)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="MetaContainer" type="VBoxContainer" parent="SongListPreview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Panel2" type="PanelContainer" parent="SongListPreview/VBoxContainer/MetaContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="SongListPreview/VBoxContainer/MetaContainer/Panel2"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="BPMLabel" type="Label" parent="SongListPreview/VBoxContainer/MetaContainer/Panel2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "(NT)160 BPM"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SongMetaLabel" type="Label" parent="SongListPreview/VBoxContainer/MetaContainer/Panel2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_c1g4p")
text = "sadsadsadsad"
horizontal_alignment = 1
autowrap_mode = 3
